Fixed wrapping

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1012,7 +1012,7 @@
 /* Wrapper */
 
 	.wrapper {
-		padding: 0em 0em 1em 0;
+		padding: 1em 0em 1em 0;
 
 		&.style1 {
 			background: #fff;
